# spice-protocol

./: Makefile.am  NEWS  configure.ac  meson.build  spice-protocol.pc.in  spice.proto
python_modules/: demarshal.py
spice/: Makefile.am  enums.h  macros.h  meson.build  protocol.h  stream-device.h  vd_agent.h
